docs arch: remediation plan/review updates, T5-5 module5 completion record, concurrent executor design